--- a/src/components/molecules/ProductDetails/ProductDetails.module.scss
+++ b/src/components/molecules/ProductDetails/ProductDetails.module.scss
@@ -60,4 +60,11 @@
       }
     }
   }
+  &__image {
+    -o-object-fit: contain;
+       object-fit: contain;
+    width: 100% !important;
+    position: relative !important;
+    height: unset !important;
+  }
 }
